--- a/shopbyjersey/src/main/webapp/NewFile.html
+++ b/shopbyjersey/src/main/webapp/NewFile.html
@@ -119,7 +119,7 @@
 			//--------------
 			$.ajax({
 				url : "/shopbyjersey/rest/user/getDetail",
-				type : "post",
+				type : "get",
 				data : {
 					"order_id" : param
 				},
@@ -167,22 +167,27 @@
 
 </head>
 <body>
+
+
+<div  style="margin-left:30px;width:700px">
+<!-- 查询 -->
+<div style="width:500px">
 	<!--框 -->
 	<div class="panel-body" style="padding-bottom: 0px;">
 		<div class="panel panel-default">
-			<div class="panel-heading">查询条件</div>
+			<div class="panel-heading"></div>
 			<div class="panel-body">
 				<form id="formSearch" class="form-horizontal">
 					<div class="form-group" style="margin-top: 5px">
 
 						<br> <label class="control-label col-sm-1"
-							for="txt_search_statu">商品编码</label>
+							for="txt_search_statu">商品编码:</label>
 						<div class="col-sm-3">
 							<input type="text" class="form-control" id="prod_code"
 								onblur="checkParam(value)"><a id='id_warnning'></a>
 						</div>
 						<br> <label class="control-label col-sm-1"
-							for="txt_search_statu">商品名称</label>
+							for="txt_search_statu">商品名称:</label>
 						<div class="col-sm-3">
 							<input type="text" class="form-control" id="prod_desc">
 						</div>
@@ -193,13 +198,14 @@
 		</div>
 	</div>
 
-	<table>
+	<table style="margin-left:95px;">
 
 		<tr>
-			<td>
+		<td width="17%" valign="middle"><span>开始时间 :</span></td>
+			<td width="83%">
 				<!-- 开始时间 -->
 				<div class="control-group">
-					<label class="control-label">开始时间 :</label>
+				<!-- <label class="control-label"></label> -->	
 					<div id="startdate" class="controls input-append date form_date"
 						data-date="" data-date-format="dd MM yyyy"
 						data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
@@ -207,27 +213,30 @@
 						<span class="add-on"><i class="icon-remove"></i></span> <span
 							class="add-on"><i class="icon-th"></i></span>
 					</div>
-					<input type="hidden" value="" /><br />
+					<input type="hidden" value="" />
 				</div>
 			</td>
-			<td>
+			</tr>
+			<tr>
+			<td width="17%"><span>结束时间 :</span></td>
+			<td width="83%">
 				<!-- 结束时间 -->
 				<div class="control-group">
-					<label class="control-label"> 结束时间:</label>
+						<!-- <label class="control-label"></label> -->	
 					<div id="enddate" class="controls input-append date form_date"
-						data-date="" data-link-format="yyyy-mm-dd">
+						data-date="" data-link-format="yyyy-mm-dd">结束时间:
 						<input id="date_end" size="16" type="text" value="" readonly>
 						<span class="add-on"><i class="icon-remove"></i></span> <span
 							class="add-on"><i class="icon-th"></i></span>
 					</div>
-					<input type="hidden" value="" /><br />
+					<input type="hidden" value="" />
 				</div>
 			</td>
 		</tr>
 
 	</table>
 
-
+</div>
 
 
 	<!-- bootsrap-table 主体 -->
@@ -256,7 +265,7 @@
 			</div>
 		</div>
 	</div>
-
+</div>
 	<script type="text/javascript">
 		$('.form_date').datetimepicker({
 			language : 'zh-CN',
